# python_template

./: .gitignore  .pre-commit-config.yaml  ci.yml  copier.yaml  pyproject.toml
src/python_template/: __main__.py  greet.py
tests/: test_greet.py  test_main.py
